Fix: Correção de bloqueio e notificação